--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-toastify": "^6.0.8",
     "redux": "^4.0.5",
     "sass": "^1.26.10",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "url-loader": "^4.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
